# PPO

./: calculation_details.py  main.py  main_manual_calculations.py  plot_cluster.py  pokus.py  pokus2.py  pyproject.toml  soildata.csv  toy_dataset.py
ppo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
