[project]
name = "ppo"
version = "0.1.0"
description = "A Python project"
authors = [
    { name = "Jan Janoušek", email = "honza.janousek.11@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "pandas>=2.3.0",
    "plotly>=6.1.2",
    "pyqt5>=5.15.11",
    "pyqt6>=6.9.1",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
